Changed CMAKE_SOURCE_DIR to CMAKE_CURRENT_SOURCE_DIR cmake would not find zvkeyboard.h in vf-metaproject because it expects the include folder on toplevel.
Signed-off-by: bhamacher <b.hamacher@zera.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ set_target_properties(ZVKeyboard PROPERTIES SOVERSION ${ZVKEYBOARD_VERSION_MAJOR
 # announce global headers - build perspective
 include_directories(
     # public header
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     # generated export header
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
 )
